--- a/src/app/Login/loginpsi/loginpsi.component.html
+++ b/src/app/Login/loginpsi/loginpsi.component.html
@@ -42,9 +42,10 @@
       </div>
 
       <div class="target-btn">
-        <a href="/reg_dato_psicologo" class="register-btn">
+        
+        <label [routerLink]="['/reg_dato_psicologo']"  class="register-btn">
           No tienes una cuenta? Registrese aqui!
-        </a>
+        </label>
       </div>
     </div>
   </div>
