--- a/src/app/asignacion/psicologo/psicologo.component.html
+++ b/src/app/asignacion/psicologo/psicologo.component.html
@@ -75,7 +75,7 @@
     <button mat-flat-button (click)="cancelar()">
           Cancelar
     </button>
-    <button mat-raised-button (click)="asignarpaciente()" [disabled]="especialistaselec.length<1"  >Asignar</button>
+    <button mat-raised-button (click)="asignarpaciente()" [disabled]="especialistaselec.length>0 ? null :'disabled' "   >Asignar</button>
    
   </div>
 
