--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .cdk-global-overlay-wrapper, .cdk-overlay-container { z-index: 9999!important; } 
 .mat-step-header .mat-step-icon-selected, .mat-step-header .mat-step-icon-state-done, 
 .mat-step-header .mat-step-icon-state-edit {
-    background-color: #992e45 !important;
+    background-color: cadetblue !important;
    color: white !important;
 }
 
