--- a/src/app/asignacion/asignacion.component.css
+++ b/src/app/asignacion/asignacion.component.css
@@ -4,7 +4,7 @@
 body{
   width: 100vw;
   padding-top: 30px;
-  height: 100vh;
+  height: 90vh;
   background-color: antiquewhite;
 }
 .ti{
@@ -13,8 +13,8 @@ text-align: center;
 .container{
   border-radius: 20px;
   padding-top: 20px;
-  width: 100%;
-  height: 84vh;
+  width: 100vw;
+  height: 80vh;
     background-color: white
 }
 .barradebusqueda{
@@ -102,22 +102,23 @@ tr.example-element-row:not(.example-expanded-row):active {
   height: 100%;
 }
 .detailrigth{
-  width: 60%;
+  width: 100%;
   height: 100%;
 }
 
 .group-item{
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: row;
 
 }
 .item-info{
   display: flex;
-  margin-right: 15px;
+  margin-right: 25px;
   margin-bottom: 10px;
   margin-top: 10px;
+  width: 30%;
   flex-direction: column;
   
 color: #c5c5c5;
@@ -130,4 +131,11 @@ font-weight: bold;
 .detalleobse{
   width: 100%;
   display: flex;
+  flex-direction: column ;
+}
+
+
+.item-info-lg{
+  width: 100%;
+ 
 }
