--- a/src/app/navbar/nav/nav.component.css
+++ b/src/app/navbar/nav/nav.component.css
@@ -33,9 +33,7 @@
     height: 40px;
     display: flex;
     justify-content: center;
-    background-image: url('https://s3.amazonaws.com/files.patmos.upeu.edu.pe/img/upload/fotos/80/no_photo.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
+  border-radius: 50%;
     align-items: center;
     margin-right: 10px;
 }
@@ -97,7 +95,7 @@ body{
       justify-content: flex-start;
       padding-left: 20px;
       align-items: center;
-    background-color: #992e45 ;
+    background-color:   #fab044 ;
     height: 10vh;
      color: white;
 }
@@ -110,7 +108,7 @@ body{
 .cont-menu-title h3{
     
     font-weight: 700;
-    color: #992e45 ;
+    color: #01a89e  ;
 
 }
 
@@ -136,7 +134,7 @@ body{
 .nava{
    
    
-    color: #992e45 ;
+    color: #01a89e ;
     margin-top: 10px;
     display: flex;
     height: 50px;
@@ -155,7 +153,7 @@ body{
 }
 .nava:hover{
     cursor: pointer;
-    background-color: #8f4757 ;
+    background-color: #01a89e ;
     border-radius: 10px;
     
     color: white;
