--- a/src/app/pages/Perfil/datos-user/datos-user.component.html
+++ b/src/app/pages/Perfil/datos-user/datos-user.component.html
@@ -1,9 +1,276 @@
-<body>
- <div class="circular-img"></div>
-   <div class="card-body">
-      
+<head>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+</head>
 
-   </div>
+<body>
+
+  <div class="card-body">
+
+    <div class="cardrigth">
+      <div class="fotoclass">
+       
+        <h3>Mario Llori Santiago Rodrigo</h3>
+        <div class="circular-img" >
+          <img  id="imagendeperfil" >
+        </div>
+        <div class="imgback" >
+          <input type="file" accept=".jpg, .png, .jpeg" style="opacity: 0; width: 100%;height: 100%;cursor: pointer;" [(ngModel)]="foto"  (change)="mostrar($event)">
+        </div>
+        <div style="width: 100%;display: flex;margin-top: 10px;justify-content: center;">
+          <button style="display: flex;
+          justify-content: space-between;align-items: center;padding: 5px;"
+           type="button" [disabled]="!archivo" class="btn btn-light" (click)="subirfoto()">
+            Subir
+            <mat-icon style="margin: 0;" matSuffix>upload</mat-icon>
+          </button>
+        </div>
+          
+      
+  
+      </div>
+     <div style="text-align: center;">
+
+       <label class="academic" style="color: white;text-align: center;">Datos Academicos</label>
+     </div>
+      <form class="schooldata" *ngIf="tipo=='estudiante'">
+        <fieldset [disabled]="!editstate2">
+          <div>
+            <label><mat-icon matSuffix>school</mat-icon> Ciclo: </label>
+            <input type="text" [(ngModel)]="personal.ciclo" name="ciclo" style="text-transform:
+              capitalize;" placeholder="1">
+          </div>
+        </fieldset>
+        <fieldset [disabled]="!editstate2">
+          <div>
+            <label> <mat-icon matSuffix>groups</mat-icon>Grupo: </label>
+            <input [(ngModel)]="personal.grupo" name="grupo" type="text"
+             >
+          </div>
+        </fieldset>
+        <fieldset [disabled]="!editstate2">
+          <div>
+            <label><mat-icon matSuffix>qr_code_2</mat-icon>Codigo:
+            </label>
+            <input type="text" [(ngModel)]="personal.codigo" name="codigo" style="text-transform:
+              capitalize;" >
+          </div>
+        </fieldset>
+        <div *ngIf="!editstate2" class="savebtns2">
+          <button (click)="activar2()"  style="padding: 5px;display: flex;justify-content: center;align-items: center;margin-left: 40%;" type="button" class="btn btn-light">
+            Editar<mat-icon style="margin: 0;font-size: 18px;height: auto;" matSuffix>edit</mat-icon> 
+          </button>
+        </div>
+  
+  
+        <div *ngIf="editstate2" class="savebtns2">
+          <button (click)="desactive2()" class="btn1">
+            <mat-icon matSuffix>block</mat-icon> Cancelar
+          </button>
+          <button (click)="save2()" class="btn2">
+            <mat-icon matSuffix>save</mat-icon> Guardar
+          </button>
+        </div>
+      </form>
+
+
+      <form class="schooldata" *ngIf="tipo=='pastor'">
+        <fieldset [disabled]="!editstate2">
+          <div>
+            <label><mat-icon matSuffix>work</mat-icon> Campo: </label>
+            <input type="text" [(ngModel)]="personal.campo" name="campo" style="text-transform:
+              capitalize;" >
+          </div>
+        </fieldset>
+        <fieldset [disabled]="!editstate2">
+          <div>
+            <label> <mat-icon matSuffix>location_city</mat-icon>Distrito: </label>
+            <input [(ngModel)]="personal.distrito" name="distrito"  type="text"
+             >
+          </div>
+        </fieldset>
+        <div *ngIf="!editstate2" class="savebtns2">
+          <button (click)="activar2()"  style="padding: 5px;display: flex;justify-content: center;align-items: center;" type="button" class="btn btn-light">
+            Editar<mat-icon style="margin: 0;font-size: 18px;height: auto;" matSuffix>edit</mat-icon> 
+          </button>
+        </div>
+  
+  
+        <div *ngIf="editstate2" class="savebtns2">
+          <button (click)="desactive2()" class="btn1">
+            <mat-icon matSuffix>block</mat-icon> Cancelar
+          </button>
+          <button (click)="save2()" class="btn2">
+            <mat-icon matSuffix>save</mat-icon> Guardar
+          </button>
+        </div>
+      </form>
+
+      <form class="schooldata" *ngIf="tipo=='psicologo'">
+        <fieldset [disabled]="!editstate2">
+          <div>
+            <label><mat-icon matSuffix>account_balance</mat-icon> Universidad: </label>
+            <input type="text"  [(ngModel)]="personal.universidad" name="universidad" style="text-transform:
+              capitalize;" >
+          </div>
+        </fieldset>
+        <fieldset [disabled]="!editstate2">
+          <div>
+            <label> <mat-icon matSuffix>grade</mat-icon>Especialidad: </label>
+            <input  [(ngModel)]="personal.correo" name="correo" type="text"
+              >
+          </div>
+        </fieldset>
+        <fieldset [disabled]="!editstate2">
+          <div>
+            <label><mat-icon matSuffix>pin</mat-icon>Colegiatura:
+            </label>
+            <input type="text"  [(ngModel)]="personal.n_colegiatura" name="num" style="text-transform:
+              capitalize;" >
+          </div>
+        </fieldset>
+        <fieldset [disabled]="!editstate2">
+          <div>
+            <label><mat-icon matSuffix>history_edu</mat-icon>Grado Academico:
+            </label>
+            <input type="text"  [(ngModel)]="personal.grado_academico" name="grado" style="text-transform:
+              capitalize;" >
+          </div>
+        </fieldset>
+        <div *ngIf="!editstate2" class="savebtns2">
+          <button (click)="activar2()"  style="padding: 5px;display: flex;justify-content: center;align-items: center;" type="button" class="btn btn-light">
+            Editar<mat-icon style="margin: 0;font-size: 18px;height: auto;" matSuffix>edit</mat-icon> 
+          </button>
+        </div>
+  
+  
+        <div *ngIf="editstate2" class="savebtns2">
+          <button (click)="desactive2()" class="btn1">
+            <mat-icon matSuffix>block</mat-icon> Cancelar
+          </button>
+          <button (click)="save2()" class="btn2">
+            <mat-icon matSuffix>save</mat-icon> Guardar
+          </button>
+        </div>
+      </form>
+    
+    </div>
+    <div class="cardleft">
+      <h4>Datos Personales</h4>
+
+      <form [formGroup]="registerform" class="datapersonal">
+        <fieldset [disabled]="!editstate">
+          <div class="item">
+            <label><mat-icon matSuffix>person</mat-icon> Nombres: </label>
+            <input type="text" formControlName="nombre" style="text-transform:
+              capitalize;" placeholder="Mario Llori Santiago">
+          </div>
+        </fieldset>
+        <fieldset [disabled]="!editstate">
+          <div class="item">
+            <label> <mat-icon matSuffix>email</mat-icon>Correo: </label>
+            <input formControlName="correo" type="text"
+              placeholder="example@upeu.edu.pe">
+          </div>
+        </fieldset>
+        <fieldset [disabled]="!editstate">
+          <div class="item">
+            <label><mat-icon matSuffix>person_outline</mat-icon>Apellidos:
+            </label>
+            <input type="text" formControlName="apellido" style="text-transform:
+              capitalize;" placeholder="Mario Llori Santiago">
+          </div>
+        </fieldset>
+        <fieldset [disabled]="!editstate">
+          <div class="item">
+            <label> <mat-icon matSuffix>call</mat-icon>Telefono: </label>
+            <input type="text" formControlName="telefono" type="number"
+              onKeyPress="if(this.value.length==9) return false;"
+              placeholder="999999999">
+          </div>
+        </fieldset>
+        <fieldset [disabled]="!editstate">
+          <div class="item">
+            <label> <mat-icon matSuffix>hourglass_full</mat-icon>Edad: </label>
+            <input type="number" formControlName="edad"
+              placeholder="99">
+          </div>
+        </fieldset>
+        <fieldset [disabled]="!editstate">
+          <div class="item">
+            <label><mat-icon matSuffix>wc</mat-icon>Genero :</label>
+            <select formControlName="genero">
+              <option value="H">Hombre</option>
+              <option value="M">Mujer</option>
+            </select>
+
+          </div>
+        </fieldset>
+        <div *ngIf="!editstate" class="savebtns">
+          <button (click)="activar()" class="editbtn">
+            Editar 
+          </button>
+        </div>
+
+
+        <div *ngIf="editstate" class="savebtns">
+          <button (click)="desactive()" class="btn1">
+            <mat-icon matSuffix>block</mat-icon> Cancelar
+          </button>
+          <button (click)="save()" class="btn2">
+            <mat-icon matSuffix>save</mat-icon> Guardar
+          </button>
+        </div>
+
+
+
+
+      </form>
+      <h4>Horario Actual</h4>
+      <form style="padding: 10px;">
+        <div class="horarioadd">
+          <label>Dia:</label>
+          <select [(ngModel)]="dia" style="width: 150px;height:
+            30px;margin-right: 30px;" name="dia">
+            <option value="null" selected></option>
+            <option *ngFor="let d of dias" value="{{d}}">{{d}}</option>
+          </select>
+
+          <label>H.Inicio:</label>
+          <input type="time" placeholder="9:00 - 2:00" [(ngModel)]="horai"
+            name="hora">
+          <label>H.Fin:</label>
+          <input type="time" placeholder="9:00 - 2:00" [(ngModel)]="horaf"
+            name="hora">
+
+          <button mat-button type="button" class="boton" [disabled]="!dia ||
+            !horai || !horaf" (click)="agregarhorario()"><mat-icon>add</mat-icon>
+            Agregar</button>
+        </div>
+        <ul>
+          <li *ngFor="let horario of horarios">
+            <mat-icon style="color: white;margin-right: 20px;">check</mat-icon>
+            <label style="margin-left: 10%;">{{horario.dia}}</label>
+            <label style="margin-left: 20%;">{{horario.horai + ' - ' +
+              horario.horaf}}</label>
+            <mat-icon style="margin-left: 30%;cursor: pointer;"
+              (click)="eliminarhor(horario.idhorario,horario.dia)">delete</mat-icon>
+          </li>
+        </ul>
+
+
+      </form>
+
+
+    </div>
+
+
+
+
+
+
+
+  </div>
 
 
 
