--- a/src/app/pages/gest-op/gest-op.component.css
+++ b/src/app/pages/gest-op/gest-op.component.css
@@ -35,6 +35,7 @@ h5{
     height: 80%;
     
     display: flex;
+    flex-direction: column;
 }
 .container{
     border-radius: 20px;
@@ -72,7 +73,7 @@ h5{
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-bottom: 40px;
+  
        align-items: center;
 }
 .buttons{
@@ -139,8 +140,8 @@ h5{
     height: 100%;
 }
 .cuerpo2{
-    width: 60%;
-    height: 100%;
+    width: 100%;
+    height: 50%;
     padding: 10px;
 
 }
@@ -148,8 +149,8 @@ h5{
 .formulario1{
     width: 100%;
     height: 50%;
-    
-    
+    align-items: center;
+    display: flex;
     padding: 20px;
     margin: 0;
     
