--- a/src/app/pages/gest-op/gest-op.component.html
+++ b/src/app/pages/gest-op/gest-op.component.html
@@ -4,8 +4,8 @@
             <h5>Gestion de Rol-Opciones</h5>
         </div>
         <div class="container2">
-            <div class="img-gestop">
-                <img src="assets/seginform.jpg" />
+            <div style="width: 100%;height: 60%; text-align: center;margin-top: 20px;margin-bottom: 10px;">
+                <img style="width: 30%;height: 100%;" src="assets/seginform.png" alt="">
             </div>
             <div class="cuerpo2">
                 <div class="formulario1">
@@ -40,7 +40,7 @@
                         <button type="button" class="btn btn-light" [disabled]="!rolactual" (click)="eliminarrol()">Eliminar <mat-icon style="color: red;" matSuffix>delete_forever</mat-icon></button>
                         <button type="button" class="btn btn-light" [disabled]="!rolactual" (click)="getrol()" data-toggle="modal" data-target="#modifyrolmodal">Modificar <mat-icon style="color: blue;" matSuffix>upgrade</mat-icon></button>
                         <button type="button" class="btn btn-light" [disabled]="!rolactual" (click)="getopcionesdisponibles()" data-toggle="modal" data-target="#agregaropcionrol">
-                            Agregar Opcione <mat-icon style="color: red;" matSuffix>delete_forever</mat-icon>
+                            Agregar Opcion <mat-icon style="color: darkgreen;" matSuffix>add_circle</mat-icon>
                         </button>
                     </div>
                 </div>
