--- a/src/app/pages/gest-users/gest-users/gest-users.component.css
+++ b/src/app/pages/gest-users/gest-users/gest-users.component.css
@@ -15,7 +15,8 @@ table {
     
   }
   .tablegen{
-  margin: 0px auto 0px auto;
+  margin-left: 20px;
+  margin-top: 40px;
     width: 90%;
     height: 80%;
   }
@@ -26,8 +27,11 @@ table {
     
   }
   h4{
-      margin: 0 auto 10px auto;
+     
       width: 40%;
+      margin-left:80px;
+      margin-bottom: 30px;
+      font-weight: bold;
 
   }
 .cuerpo_gestion_dos{
@@ -45,7 +49,7 @@ table {
 
 
 .modal-header{
-    background-color: #992e45;
+    background-color: #01a89e;
     color: white;
 }
 
@@ -127,4 +131,16 @@ table {
     margin: 50px auto 0px auto;
     background-color: #992e45;
     color: white;
+}
+
+ul{
+ display: flex;
+ 
+}
+li a{
+    text-decoration: none;
+   
+    font-size: large;
+    font-weight: bold;
+    color: black;
 }
