--- a/src/app/reportes/reportes/reportes.component.html
+++ b/src/app/reportes/reportes/reportes.component.html
@@ -84,6 +84,11 @@
                         "{{input.value}}"</td>
                 </tr>
             </table>
+            <mat-paginator 
+              [pageSize]="5"
+              [pageSizeOptions]="[3,5,6]"
+              >
+</mat-paginator>
 
         </div>
     </div>
