--- a/src/custom.scss
+++ b/src/custom.scss
@@ -2,8 +2,8 @@
 
 @include mat-core();
   
-$candy-app-primary: mat-palette($mat-red,900);
-$candy-app-accent: mat-palette($mat-red, A200, A100, A400);
+$candy-app-primary: mat-palette($mat-teal,300);
+$candy-app-accent: mat-palette($mat-grey, A200, A100, A400);
 $candy-app-warn: mat-palette($mat-red);
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
 
